k3s_cluster/base/dmz/oss/forgejo/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment
  namespace: dmz
  labels:
    app: dmz-oss-forgejo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dmz-oss-forgejo
  template:
    metadata:
      labels:
        app: dmz-oss-forgejo
    spec:
      tolerations:
        - key: node.kubernetes.io/not-ready
          operator: Exists
          effect: NoExecute
          tolerationSeconds: 10
        - key: node.kubernetes.io/unreachable
          operator: Exists
          effect: NoExecute
          tolerationSeconds: 10
      serviceAccountName: serviceaccount
      containers:
        - name: forgejo
          image: codeberg.org/forgejo/forgejo:16
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: data
              mountPath: /data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: data-pvc
