k3s_cluster/base/dmz/oss/forgejo/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service
  namespace: dmz
  labels:
    app: dmz-oss-forgejo
spec:
  type: ClusterIP
  selector:
    app: dmz-oss-forgejo
  ports:
    - name: web
      protocol: TCP
      port: 6608
      targetPort: 3000
