k3s_cluster/base/dmz/oss/forgejo/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ingressroute
  namespace: dmz
  labels:
    app: dmz-oss-forgejo
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - kind: Rule
      match: Host(`codeberg.oss.dmz.home`)
      # middlewares:
      #   - name: dmz-middleware-auth-authentik
      services:
        - name: dmz-oss-forgejo-service
          port: 6610
  #tls: {}
